bug(tags): change css so tags don't wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,6 +252,9 @@ time {
     justify-content: space-between;
 }
 
+.tag {
+    white-space: nowrap;
+}
 .tag a{
     border: 2px solid var(--maincolor); 
     padding: 0px 4px 2px;
